# SusBonk_V1

./: .backend_copy_timestamp  .env.example  .gitignore  CODE_REVIEW_SUMMARY.md  DEPLOYMENT_PROTOCOL.md  DEVLOG.md  INTEGRATION_COMPLETE.md  INTEGRATION_SUMMARY.md  README.md  TODO.md  docker-compose.yml  test-admin-deployment.sh  test-ai-service.sh  test-email-alert.sh  test-log-platform.sh  test-telegram-bot.sh
.agent/workflows/: browser-test.md
admin/: DEPLOYMENT.md  Dockerfile  README.md  manage.py  pyproject.toml  start.sh
ai-service/: Cargo.toml  Dockerfile  README.md
ai-service/example_usage/: README.md  demo.py  submit_task.py  tail_results.py
ai-service/src/: llm_client.rs  main.rs  opensearch_ingest.rs
alertd/: Cargo.toml  Dockerfile
backend/: API_README.md  CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_VERIFICATION.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  TEST_CHECKLIST.md  TEST_EXECUTION_REPORT.md  docker-compose.yml  healthcheck.sh  main.py  pyproject.toml  run_tests.py  schema.sql  settings.py  start-api.sh  test-api.sh  validate_task12.py  validate_tasks.py
backend.backup-20260127-155659/: .dockerignore  CODE_REVIEW_FIXES.md  DEPLOYMENT_STATUS.md  Dockerfile  MIGRATION_COMPLETE.md  TEST_PROTOCOL.md  healthcheck.sh  main.py  main_new.py  pyproject.toml  redis.conf  validate_task10.py  validate_task11.py  validate_task13.py  validate_task9.py
backend.backup-20260127-155659/api/: security.py
backend.backup-20260127-155659/api/handlers/: prompt.py  user_state.py
backend.backup-20260127-155659/core/: db_helper.py
backend.backup-20260127-155659/database/: redis_helper.py
backend.backup-20260127-155659/database/models/: __init__.py  models.py
backend.backup-20260127-155659/database/schemas/: chat.py  prompt.py
backend.backup-20260127-155659/handlers/: chat.py  prompt.py  user_state.py
backend.backup-20260127-155659/init/: index-template.json  init.sh
backend.backup-20260127-155659/logger/: __init__.py
backend.backup-20260127-155659/models/: __init__.py  links.py  prompt.py  user.py
backend.backup-20260127-155659/schemas/: auth.py  chat_prompt_links.py  deleted_messages.py
backend.backup-20260127-155659/tests/: conftest.py  test_auth.py  test_security.py
backend/alertd/src/: main.rs
backend/api/: README.md  __init__.py  security.py
backend/api/handlers/: __init__.py  auth.py  chat.py  deleted_messages.py  health.py  prompt.py  user_state.py
backend/core/: __init__.py  security.py  settings.py
backend/database/: README.md  __init__.py  helper.py
backend/database/models/: __init__.py  base.py  chat.py  models.py  prompt.py  statistics.py  user.py
backend/database/schemas/: __init__.py  auth.py  chat.py  chat_prompt_links.py  deleted_messages.py  prompt.py  prompts.py  user_state.py  users.py
backend/handlers/: __init__.py  auth.py  chat_prompt_links.py  deleted_messages.py
backend/ingestd/: Cargo.toml
backend/ingestd/src/: main.rs
backend/init/: ism-policy.json
backend/logger/: __init__.py  colored_formatter.py  opensearch_handler.py
backend/models/: chat.py  statistics.py  user_state.py
backend/schemas/: __init__.py  chat.py  user_state.py
backend/tests/: conftest.py  test_crud.py  test_routes.py
docs/: SECURITY_SETUP.md  admin-implementation-summary.md  ai-service-code-review.md  backend-readme.md  code-review-2026-01-29.md  code-review-action-plan.md  python-dependency-policy.md  python-quick-reference.md  schema.sql  task-2.4-completion.md  task-3.1-3.2-completion.md
frontend/: .dockerignore  .env.example  CODE_REVIEW.md  DEPLOYMENT.md  Dockerfile  README.md  STORE_GUIDE.md  TESTING.md  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend_cyberpunk/: Dockerfile  package.json
frontend_old/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json
ingestd/: Dockerfile
init/: init.sh
log-platform/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.alertd  Dockerfile.ingestd  QUICK_REFERENCE.md  README.md  TODO.md  WORKSPACE_REFACTOR.md
log-platform/alertd/: Cargo.toml
log-platform/alertd/src/: main.rs
log-platform/example_usage/: README.md  warn_with_requests.py  with_curl.sh  with_requests.py
log-platform/ingestd/: Cargo.toml
log-platform/ingestd/src/: main.rs
log-platform/init/: index-template.json  init.sh  ism-policy.json
log-platform/log_platform_common/: Cargo.toml
log-platform/log_platform_common/src/: env.rs  http.rs  lib.rs  opensearch.rs  parse.rs  types.rs
log-platform/log_platform_common/src/notify/: mod.rs
log-platform/log_platform_service/: Cargo.toml
log-platform/log_platform_service/src/: lib.rs
log-platform/services/: Cargo.toml  README.md
log-platform/services/src/: alertd.rs  ingestd.rs
log-platform/src/: alertd.rs  ingestd.rs  lib.rs
log-platform/tests/: email_integration.rs
postal/: CODE_REVIEW.md  IMPLEMENTATION.md  QUICK_REFERENCE.md  README.md  docker-compose.yml  start.sh  test-email.sh
scripts/: verify-security.sh
telegram-bot/: CODE_REVIEW.md  Cargo.toml  Dockerfile  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PLAN.md  README.md  SYSTEM_ANALYSIS.md  test-e2e.sh  test-whitelist.sh  test_redis.sh  validate-all.sh
telegram-bot/app/: Cargo.toml  ai_models.rs  database.rs  main.rs  opensearch_ingest.rs  redis_service.rs  redis_utils.rs  services.rs
telegram-bot/app/bot/: helpers.rs  mod.rs  utils.rs  wiring.rs
telegram-bot/app/bot/handlers/: command.rs  group_enqueue.rs  mod.rs  my_chat_member.rs
telegram-bot/app/workers/: group_worker.rs  mod.rs
telegram-bot/config/: Cargo.toml  README.md
telegram-bot/config/src/: lib.rs
telegram-bot/entity/: Cargo.toml
telegram-bot/entity/src/: chat_custom_prompts.rs  chat_prompts.rs  chats.rs  custom_prompts.rs  lib.rs  prelude.rs  prompts.rs  runtime_statistics.rs  user_states.rs  users.rs
telegram-bot/scripts/: generate_entities
telegram-bot/telegram-bot/: Cargo.toml  Dockerfile
telegram-bot/telegram-bot/src/: database.rs  link_detector.rs  log_client.rs  main.rs  redis_client.rs  types.rs
(+109 files in other folders)
