[package]
name = "ai_service"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
dotenv = "0.15"
redis = { version = "1.0.2", features = ["tokio-comp", "streams"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde_json = "1.0.149"
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing-log = "0.2.0"
chrono = { version = "0.4.42", features = ["std", "clock", "serde"] }
tracing-core = "0.1.36"
