[package]
name = "log-platform"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tokio-retry = "0.3"
axum = "0.7"

[lib]
name = "log_platform"
path = "src/lib.rs"

[[bin]]
name = "ingestd"
path = "src/ingestd.rs"

[[bin]]
name = "alertd"
path = "src/alertd.rs"
