[workspace]
resolver = "2"
members = [
    "services",
    "log_platform_common",
    "log_platform_service",
]

[workspace.dependencies]
axum = "0.8"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "gzip", "brotli", "deflate", "rustls-tls"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
lettre = { version = "0.11.19", features = ["rustls-tls"] }