[package]
name = "ingestd"
version = "0.1.0"
edition = "2021"

[dependencies]
log_platform_common = { path = "../log_platform_common" }
tokio = { workspace = true }
axum = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
