[package]
name = "log_platform_common"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
chrono.workspace = true
anyhow.workspace = true
lettre.workspace = true
tokio.workspace = true
log_platform_domain = { path = "../log_platform_service" }