[package]
name = "config"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
config.workspace = true
dotenvy.workspace = true
once_cell.workspace = true
serde.workspace = true
log.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
url.workspace = true
